--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ var map = [
     1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 1,
     1, 1, 1, 1, 7, 1, 6, 1, 9, 1, 6, 1, 7, 1, 1, 1, 1, 1, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 1,
   ];
-  var showMap = true;
+  var showMap = false;
   
   // player
   var playerX = MAP_SCALE + 32;
